# video_search_engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  video_search_engine.sln
create_invert_index/: create_invert_index.cpp  create_invert_index.vcxproj  create_invert_index.vcxproj.filters
create_noise_videos/: create_noise_videos.cpp  create_noise_videos.vcxproj  create_noise_videos.vcxproj.filters
create_query_videos/: create_query_videos.cpp  create_query_videos.vcxproj  create_query_videos.vcxproj.filters
demo_searcher/: demo_searcher.cpp  demo_searcher.vcxproj  demo_searcher.vcxproj.filters
header/: INIReader.h  algo.h  common.h  config.h  debug.h  imgproc.h  ini.h  io.h  picosha2.h  similar.h  utils.h  utils.tpp
rsrc/: config.ini  debug_property_sheet.props
searcher/: main.cpp  searcher.cpp  searcher.vcxproj  searcher.vcxproj.filters
src/: INIReader.cpp  algo.cpp  create_noise_videos.cpp  create_query_videos.cpp  debug.cpp  demo_searcher.cpp  imgproc.cpp  ini.c  io.cpp  searcher.cpp  similar.cpp  test_create_index.cpp  test_frame_comparison.cpp  test_interval_comparison.cpp  test_perf.cpp  test_video_comparison.cpp  test_video_decode.cpp  utils.cpp  video_search_engine.cpp
targets/: create_noise_videos.cpp  searcher.cpp  test_create_index.cpp  test_radon_transform.cpp  test_video_comparison.cpp  test_video_decode.cpp  video_search_engine.cpp
test/: test.cpp  test.txt  test.vcxproj  test.vcxproj.filters
test_create_index/: test_create_index.cpp  test_create_index.vcxproj  test_create_index.vcxproj.filters
test_perf/: test_perf.vcxproj  (+1 more)
(+36 files in other folders)
